# cuemap

./: .cuemapignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.production  LICENSE  README.md  build.rs  lemma_exceptions.json  start_production.sh  test_production.sh
.github/workflows/: main.yml
scripts/: ci_check.sh
src/: api.rs  auth.rs  config.rs  crypto.rs  engine.rs  grounding.rs  jobs.rs  lib.rs  llm.rs  main.rs  metrics.rs  multi_tenant.rs  nl.rs  normalization.rs  persistence.rs  projects.rs  semantic.rs  structures.rs  taxonomy.rs  web.rs
src/agent/: chunker.rs  ingester.rs  manager.rs  mod.rs  search.rs  watcher.rs
src/evals/: mod.rs  runner.rs
src/evals/evals/: ambiguity.rs  dynamics.rs  mod.rs  recall_correctness.rs
tests/: api_logic_test.rs  brain_features.rs  chunker_structural_test.rs  double_indexing_test.rs  encryption_test.rs  evals_test.rs  fixture_test.rs  full_ingestion_test.rs  ingester_filter_test.rs  lemmatization_quality_test.rs  live_system_tests.rs  manual_glove_test.rs  real_evals.rs  recursive_crawl_test.rs  semantic_test.rs
tests/agent/chunker/: mod.rs
tests/engine/: mod.rs
tests/evals/: mod.rs  runner.rs
tests/evals/evals/: ambiguity.rs  determinism.rs  dynamics.rs  recall_correctness.rs
tests/integration/: mod.rs  security_test.rs  web_test.rs
tests/jobs/: mod.rs
tests/llm/: mod.rs
tests/multi_tenant/: mod.rs
tests/nl/: mod.rs
tests/normalization/: mod.rs
tests/projects/: mod.rs
tests/taxonomy/: mod.rs
web_ui/: package-lock.json  package.json  vite.config.ts
web_ui/src/: App.css  App.tsx
web_ui/src/components/: GraphVisualizer.tsx  IngestionScreen.tsx  Inspector.tsx  LexiconSurgeon.tsx  MetricsFooter.tsx  SandboxWelcome.tsx
