[package]
name = "cuemap-rust"
version = "0.6.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde", "v5"] }
rayon = "1.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
chrono = "0.4"
indexmap = { version = "2.1", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
reqwest = { version = "0.12.26", features = ["json"] }
smallvec = "1.15.1"
notify = "8.2.0"
ignore = "0.4.22"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-go = "0.23.3"
tree-sitter-html = "0.23.1"
tree-sitter-css = "0.23.1"
tree-sitter-java = "0.23.0"
tree-sitter-php = "0.23.0"
csv = "1.3"
serde_yaml = "0.9"
roxmltree = "0.20"
pdf-extract = "0.7.2"
docx-rs = "0.4"
calamine = "0.22"
digest = "0.10.7"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
globset = "=0.4.15"
walkdir = "2.5.0"
thesaurus = "0.5.2"
finalfusion = "0.18.0"
ndarray = "0.15"
lru = "0.12.3"
rust-embed = { version = "8.9.0", optional = true }
mime_guess = "2.0.5"
postagger = "0.0.3"
unicode-segmentation = "1.12"
scraper = "0.21"
url = "2.5"
unicode-general-category = "1.1.0"
nlprule = "0.6"
subtle = "2.6.1"
axum-extra = { version = "0.9", features = ["multipart"] }
libc = "0.2"
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
bytes = "1.5"
async-trait = "0.1"
futures = "0.3"

[features]
default = []
ui = ["rust-embed"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
nlprule-build = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "engine"
path = "tests/engine/mod.rs"

[[test]]
name = "jobs"
path = "tests/jobs/mod.rs"

[[test]]
name = "normalization"
path = "tests/normalization/mod.rs"

[[test]]
name = "projects"
path = "tests/projects/mod.rs"

[[test]]
name = "taxonomy"
path = "tests/taxonomy/mod.rs"



[[test]]
name = "multi_tenant"
path = "tests/multi_tenant/mod.rs"

[[test]]
name = "nl"
path = "tests/nl/mod.rs"

[[test]]
name = "llm"
path = "tests/llm/mod.rs"

[[test]]
name = "agent"
path = "tests/agent/mod.rs"
